<resources>
    <string name="app_name">Guardian</string>
    <string name="text_error_network">No Internet connection!!!</string>
    <string name="skip">Skip</string>
    <string name="text_error_internal_server">Internal server error. Please retry!!!</string>
    <string name="text_error_timeout">Sorry, We lost you. Please retry!!!</string>
    <string name="text_error_connection">Look a like we lost you for a moment. Please retry!!!</string>
    <string name="internet_message_alert">Please Check Your internet connection</string>
    <string name="g_map_api_key_1">AIzaSyCn23HyRn8zm</string>
    <string name="g_map_api_key_2">-9sao4u-</string>
    <string name="g_map_api_key_3">2x2jYFX1JZ79jI</string>
    <string name="g_map_api_key">AIzaSyB524vrRB5rsIzZJeGAqjMbnEPCBwruvd0</string>
    <string name="video_call_auth">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhcGlrZXkiOiIxZWVjYThlNi01YzUxLTQ5YzgtOTFhNi01Y2NmNTAxYTI4ZWIiLCJwZXJtaXNzaW9ucyI6WyJhbGxvd19qb2luIl0sImlhdCI6MTY3Nzc1NTk3NiwiZXhwIjoxODM1NTQzOTc2fQ.zjQKv9hHSoM6hy0ASegOcQ4YERxaForittj2XBgtCnM</string>
    <string name="aws_access_1">AKIAQ64R4A</string>
    <string name="aws_access_2">J3AQCHTFOF</string>
    <string name="aws_sec_1">n1Il5CQO8ABCuFU6miXV/</string>
    <string name="aws_sec_2">oy/IBDPr6E/</string>
    <string name="aws_sec_3">tLQLooXX</string>
    <string name="aws_base_url">https://guardian-temp151234-guardian.s3.us-east-2.amazonaws.com/public/</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="refresh">Refresh</string>
    <string name="search_here">Search here</string>
    <string name="search_loc">Search Location</string>
    <string name="your_status">Your Status :</string>
    <string name="contacted_history">Contacted History</string>
    <string name="want_to_signout">Are You Sure Want to Sign Out?</string>
    <string name="come_soon">This feature is work in progress. Very come soon this feature you will use. </string>
    <string name="delete_message">Are you sure you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="call_now">Call Now</string>
    <string name="years">Years</string>
    <string name="create_acc">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_to_start">Sign Up to Get Started!</string>
    <string name="upload_doc">Upload Documents</string>
    <string name="upload_max_doc">(Maximum Upload 5 Document)</string>
    <string name="empty_profile_pic">Please select your profile image</string>
    <string name="upload_doc_ex">(Like : Drivers license, Vehicle Registration, Learners Permit)</string>
    <string name="do_not_have_an_account_sign_in">Don’t have an account? <b>Sign In</b></string>
    <string name="already_have_an_acc">Already have an account? <b>Sign In</b></string>
    <string name="t_and_c"><u>Terms &amp; Conditions</u></string>
    <string name="desc">Description</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sing_in">SignIn</string>
    <string name="enter_your_credentials_to_continue">Enter your credentials to continue</string>
    <string name="forgot_your_password_underline"><u>Forgot your password?</u></string>
    <string name="do_not_have_an_account">Don’t have an account? <b>Sign Up</b></string>
    <string name="forgot_password_msg">Please enter the email or phone number associated with your account</string>
    <string name="remember_password">Remember Password? <b>Sign In</b></string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="select_user_role">Select user Role</string>
    <string name="user">User</string>
    <string name="mediator">Mediator</string>
    <string name="lawyer">Lawyer</string>
    <string name="submit">Submit</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="code_sent_to_email">A 4 digit code has been sent to \n your mail id or phone number</string>
    <string name="code_sent_to_ph_num">A 4 digit code has been sent to \n your phone number</string>
    <string name="dont_recieve_otp_resend_otp">Don\'t receive the OTP?<b> Resend OTP</b></string>
    <string name="verify_otp">Verify OTP</string>
    <string name="sub_plan">Subscription Plan</string>
    <string name="subcription">Subscription</string>
    <string name="photo_radar">Photo Radar</string>
    <string name="accident_roadblock">Accident/\nRoad Block</string>
    <string name="radar_text">Select below option to add photo radar and accident/road block at your current location</string>
    <string name="my_video">My Video</string>
    <string name="empty_title">Please Enter Title.</string>
    <string name="empty_desc">Please Enter Description.</string>
    <string name="add_title_hint">Title</string>
    <string name="desc_title_hint">Description </string>
    <string name="error_title">A Title must be minimum 5 characters are allowed  </string>
    <string name="error_description">Description must be minimum 5 characters are allowed. </string>
    <string name="empty_role">Please select role</string>
    <string name="empty_profileImage">Please select your profile image</string>
    <string name="empty_email">Please enter email.</string>
    <string name="empty_pass">Please enter password.</string>
    <string name="empty_con_pass">Please enter confirm password.</string>
    <string name="valid_pass">Password must contain 1 Uppercase Letter, 1 lowercase letter, 1 digit, 1 special character and length is 8 or more.</string>
    <string name="valid_con_pass">Confirm password must contain 1 uppercase letter, 1 lowercase letter, 1 digit, 1 special character and length is 8 or more.</string>
    <string name="valid_email">Please enter valid email.</string>
    <string name="not_match_con_pass">Password and Confirm Password does not match.</string>
    <string name="same_old_new_pass">Old password and new password can not be same.</string>
    <string name="empty_name">Please enter Name.</string>
    <string name="valid_name">Please enter valid name.</string>
    <string name="valid_desc">Description must be more than 50 characters.</string>
    <string name="empty_number">Please enter phone number.</string>
    <string name="valid_number">Phone Number must be less than or equal 10 Digits.</string>
    <string name="empty_state">Please enter Province/State.</string>
    <string name="valid_state">Please enter valid Province/State name.</string>
    <string name="empty_postal_code">Please enter Postal Code/Zip Code.</string>
    <string name="valid_postal_code">Please enter valid Postal Code/Zip Code.</string>
    <string name="empty_licence">Please enter licence plate no. for car.</string>
    <string name="empty_licence_num">Please enter your licence number.</string>
    <string name="valid_licence">Please enter valid licence plate no. for car.</string>
    <string name="valid_licence_num">Please enter valid licence number.</string>
    <string name="empty_from_time">Please enter from time.</string>
    <string name="empty_to_time">Please enter to time.</string>
    <string name="valid_doc">Please upload at least one document of yours.</string>
    <string name="empty_specialization">Please enter specialization.</string>
    <string name="valid_specialization">Please enter valid description of specialization</string>
    <string name="empty_exp">Please enter experience.</string>
    <string name="valid_exp">Your experience must be greater than 0 years.</string>
    <string name="empty_office_number">Please enter office phone number.</string>
    <string name="valid_office_number">Office phone Number must be less than or equal 10 digits.</string>
    <string name="valid_role_selections">Please select proper role.</string>
    <string name="empty_new_pass">Please enter new password.</string>
    <string name="empty_old_pass">Please enter old password.</string>
    <string name="valid_new_pass">New password must contain 1 uppercase letter, 1 lowercase letter, 1 digit, 1 special character and length is 8 or more.</string>
    <string name="valid_old_pass">Old password must contain 1 uppercase letter, 1 lowercase letter, 1 digit, 1 special character and length is 8 or more.</string>
    <string name="same_old_new_new_pass">New password and confirm password does not match.</string>
    <string name="valid_banner_link">Please enter valid banner link.</string>
    <string name="valid_banner_link_invalid">Selected Link is invalid.</string>
    <string name="empty_banner_link">Please add share link for banner.</string>
    <string name="valid_banner_photo">Please upload banner image.</string>
    <string name="suscription_validation_1">Your subscription plan is expired.</string>
    <string name="suscription_validation_2">Do you need to update your subscription plan?</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="record">Record (Police Interaction)</string>
    <string name="schedule_virtual_witness">Schedule Virtual Witness</string>
    <string name="support_services">Support Services</string>
    <string name="home_banners">Lawyers  Banner</string>
    <string name="seek_legal_adv">Seek Legal Advice</string>
    <string name="ask_mode_question">Ask Mod A Question</string>
    <string name="ask_a_question">Ask A Question</string>
    <string name="share_link">Share Your link</string>
    <string name="menu_home">Home</string>
    <string name="menu_lawyer">Lawyer</string>
    <string name="menu_radar">Radar</string>
    <string name="menu_history">History</string>
    <string name="menu_setting">Settings</string>
    <string name="fullname">Full Name</string>
    <string name="specialization">Specialization</string>
    <string name="years_exp">Years of Experience</string>
    <string name="mo_num">Mobile Number</string>
    <string name="office_num">Office Phone(Optional)</string>
    <string name="con_pass">Confirm Password</string>
    <string name="provience_state">Province/State</string>
    <string name="postal_code">Postal Code/Zip Code</string>
    <string name="licence_num">Licence Plate No. for Car</string>
    <string name="registered_licence_num">Registered Licence No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="video_and_audio">Video And Audio</string>
    <string name="just_audio">Just Audio</string>
    <string name="know_your_basic_rights">Know Your Basic Rights</string>
    <string name="live_virtual_witness_mediator">Live Virtual Witness/Mediator</string>
    <string name="access_your_recording">Access Your Recording</string>
    <string name="driving_offence_list">Driving Offence List</string>
    <string name="dial_a_lawyer">Dial A Lawyer</string>
    <string name="schedule_a_call_date_and_time">Schedule A Call Date &amp; Time</string>
    <string name="location_where_call_will_take_place">Location/Where Call Will Take Place</string>
    <string name="schedule_multiple_calls">Schedule Multiple Calls</string>
    <string name="contact_support">Contact Support</string>
    <string name="support_groups">Support Groups</string>
    <string name="find_a_counsellors">Find A Counsellor</string>
    <string name="find_a_counsellors_2">Find a counsellor</string>
    <string name="support_groups_example">(Crises Lines, Women Shelters Children Shelters, Domestic Violence)</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="join_meeting">Join Meeting</string>
    <string name="enter_meeting_id">Enter meeting id</string>
    <string name="create_meeting">Create Meeting</string>
</resources>