<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_lawyer"
        android:icon="@drawable/ic_lawyer"
        android:title="@string/menu_lawyer"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_radar"
        android:icon="@drawable/ic_radar"
        android:title="@string/menu_radar"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/ic_histroy"
        android:title="@string/menu_history"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/menu_setting"
        app:showAsAction="ifRoom"/>
</menu>