<?xml version="1.0" encoding="utf-8"?>
<layout>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp">

        <TextView
            android:id="@+id/txtWelcomeBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/lora_semibold"
            android:text="@string/forgot_your_password"
            android:textAlignment="center"
            android:textColor="@color/txt_dark"
            android:textFontWeight="600"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txtEnterYourCredentialsToContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora_regular"
            android:text="@string/forgot_password_msg"
            android:textAlignment="center"
            android:textColor="@color/txt_dark"
            android:textFontWeight="400"
            android:textSize="@dimen/_12ssp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcomeBack" />

        <LinearLayout
            android:id="@+id/lyLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/txtEnterYourCredentialsToContinue">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtLoginEmail"
                style="@style/White_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_mail"
                android:hint="@string/email_or_phone"
                android:fontFamily="@font/lora_regular"
                android:textFontWeight="400"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@+id/img" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSigIn"
            style="@style/blue_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/lyLoginEditText" />


        <TextView
            android:id="@+id/txtDoNotHaveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora_regular"
            android:text="@string/remember_password"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/txt_dark"
            android:textFontWeight="400"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/btnSigIn"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</layout>