<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBlue"
        tools:context=".ui.OTP.OTPScreen">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp">

            <TextView
                android:id="@+id/txtWelcomeBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/lora_semibold"
                android:text="@string/enter_otp"
                android:textAlignment="center"
                android:textColor="@color/txt_dark"
                android:textFontWeight="600"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/txtEnterYourCredentialsToContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lora_regular"
                android:text="@string/code_sent_to_email"
                android:textAlignment="center"
                android:textColor="@color/txt_dark"

                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@+id/txtWelcomeBack" />

            <LinearLayout
                android:id="@+id/lyLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/txtEnterYourCredentialsToContinue">

                <in.aabhasjindal.otptextview.OtpTextView
                    android:id="@+id/otpTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    app:height="@dimen/_45sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:length="4"
                    app:otp_box_background="@drawable/normal_rounded_light_blue"
                    app:otp_text_size="@dimen/_18ssp"
                    app:width="@dimen/_50sdp" />


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnVerifyOTP"
                style="@style/blue_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/verify_otp"
                app:layout_constraintTop_toBottomOf="@+id/lyLoginEditText" />


            <TextView
                android:id="@+id/txtDoNotHaveAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/lora_regular"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/do_not_have_an_account"
                android:textAlignment="gravity"
                android:textColor="@color/txt_dark"
                android:textFontWeight="400"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@+id/btnVerifyOTP" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>