<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >


        <include
            android:id="@+id/lyHeaderResetPassword"
            layout="@layout/headder_layout" />

        <LinearLayout
            android:id="@+id/lyLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/lyHeaderResetPassword">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtLoginEmail"
                style="@style/White_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password"
                android:fontFamily="@font/lora_regular"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textFontWeight="400"
                android:textSize="@dimen/_12ssp"
                android:drawableRight="@drawable/ic_eye_hide"
                app:layout_constraintTop_toBottomOf="@+id/img" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@android:color/transparent"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:passwordToggleTint="@color/txt_dark"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
                app:passwordToggleDrawable="@drawable/password_show_hide"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPass"
                    style="@style/White_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:hint="@string/confirm_new_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnResetPasswordSubmit"
            style="@style/blue_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/lyLoginEditText" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</layout>